fix promo display-flex,align-items

--- a/css/css-files.css
+++ b/css/css-files.css
@@ -220,15 +220,19 @@ margin: 0;
 }
 /* PROMO */
 .promo{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+ 
   width: 1100px;
   background-color: #252420;
   color: #fff;
   border-radius: 12px;
   padding-top: 120px;
   padding-bottom: 160px;
+
+}
+.promo-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
 }
 .promo-heading{
